--- a/gradle.properties
+++ b/gradle.properties
@@ -1,12 +1,12 @@
 org.gradle.jvmargs=-Xmx6G
 org.gradle.daemon=false
 
-platforms=fabric
+platforms=fabric,forge
 
-minecraft_version=1.19.4-pre3
-supported_version=1.19.4-pre3
+minecraft_version=1.19.4
+supported_version=1.19.4
 
-artifact_type=beta
+artifact_type=release
 
 archives_base_name=architectury
 archives_base_name_snapshot=architectury-snapshot
@@ -14,10 +14,10 @@ base_version=8.1
 maven_group=dev.architectury
 
 fabric_loader_version=0.14.17
-fabric_api_version=0.75.2+1.19.4
+fabric_api_version=0.76.0+1.19.4
 mod_menu_version=5.0.2
 
-forge_version=44.0.6
+forge_version=45.0.6
 
 curseforge_id=419699
 modrinth_id=lhGA9TYQ
