--- a/gradle.properties
+++ b/gradle.properties
@@ -3,8 +3,8 @@ org.gradle.daemon=false
 
 platforms=fabric
 
-minecraft_version=23w18a
-supported_version=23w18a
+minecraft_version=1.20-pre1
+supported_version=1.20-pre1
 
 artifact_type=beta
 
@@ -14,7 +14,7 @@ base_version=9.0
 maven_group=dev.architectury
 
 fabric_loader_version=0.14.19
-fabric_api_version=0.80.1+1.20
+fabric_api_version=0.80.3+1.20
 mod_menu_version=5.0.2
 
 forge_version=45.0.24
