--- a/gradle.properties
+++ b/gradle.properties
@@ -3,8 +3,8 @@ org.gradle.daemon=false
 
 platforms=fabric
 
-minecraft_version=23w35a
-supported_version=23w35a
+minecraft_version=1.20.2-pre1
+supported_version=1.20.2-pre1
 
 artifact_type=beta
 
@@ -14,7 +14,7 @@ base_version=10.0
 maven_group=dev.architectury
 
 fabric_loader_version=0.14.22
-fabric_api_version=0.87.2+1.20.2
+fabric_api_version=0.88.2+1.20.2
 mod_menu_version=7.0.0
 
 forge_version=46.0.1
