--- a/gradle.properties
+++ b/gradle.properties
@@ -1,20 +1,20 @@
 org.gradle.jvmargs=-Xmx6G
 org.gradle.daemon=false
 
-platforms=fabric,forge
+platforms=fabric
 
-minecraft_version=1.20.2
-supported_version=1.20.2
+minecraft_version=23w40a
+supported_version=23w40a
 
-artifact_type=release
+artifact_type=beta
 
 archives_base_name=architectury
 archives_base_name_snapshot=architectury-snapshot
-base_version=10.0
+base_version=11.0
 maven_group=dev.architectury
 
-fabric_loader_version=0.14.22
-fabric_api_version=0.89.1+1.20.2
+fabric_loader_version=0.14.23
+fabric_api_version=0.89.4+1.20.3
 mod_menu_version=7.0.0
 
 forge_version=48.0.1
