--- a/settings.gradle
+++ b/settings.gradle
@@ -14,8 +14,11 @@ if (JavaVersion.current().ordinal() + 1 < 17) {
 include("common")
 include("fabric")
 include("forge")
+include("minecraftforge")
+include("neoforge")
 include("testmod-common")
 include("testmod-fabric")
 include("testmod-forge")
+include("testmod-neoforge")
 
 rootProject.name = "architectury"
